--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-global{
+body{
     font-family: Lexend;
 }
 
